# vicraft

./: .gitignore  .mise.toml  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/: techstack.md
src/: aider.rs  cli.rs  config.rs  error.rs  git.rs  main.rs  templates.rs  tokens.rs
src/commands/: clear_context.rs  commit.rs  implement.rs  init.rs  mod.rs  new_issue.rs  plan.rs  pr.rs  review.rs  scan.rs  skills.rs  spec.rs
